--- a/catalog.html
+++ b/catalog.html
@@ -8,164 +8,186 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-<body>
-    <heared class="mine-header">
-        <nav class="mine-navigation">
-            <a class="mine-logo-pic">
-               <img src="img/logo.jpg" alt="логотип компании">
-           </a>
-            <ul class="navigation-list">
-                <li><a href="studio.html">студия</a></li>
-                <li><a href="clients.html">клиенты</a></li>
-                <li><a href="shop.html">магазин</a></li>
-                <li><a href="contacts.html">контакты</a></li>
-            </ul>
-        </nav>
+<body class="page">
+        <header class="page-header">
+                <nav class="main-navigation">
+                    <a class="logo">
+                       <img src="img/logo.jpg" width="200px" height="80px" alt="логотип компании">
+                   </a>
+                    <ul class="navigation-list">
+                        <li><a href="studio.html">студия</a></li>
+                        <li><a href="clients.html">клиенты</a></li>
+                        <li><a class="curent">магазин</a></li>
+                        <li><a href="contacts.html">контакты</a></li>
+                        <li><a href="#">корзина</a></li>
+                    </ul>               
+                </nav>
+        <h1>Магазин готовых шаблонов</h1>
+        </header>
 
-        <nav class="user-navigation">
-            <ul class="user-namvigation-list">
-                <li><a href="#">корзина</a></li>
-            </ul>
-        </nav>       
-    </header>    
+    <main class="page-content">
+        <div class="wrapper">
+            <form action="formFilter.php" method="POST" name="form-filter">
+                <fieldset>
+                    <legend>grids</legend>
+                    <ul class="grigs-list">
+                        <li class="grids-item"><input type="radio" name="grid-selector" id="adaptive" value="adaptive"><label for="adaptive">адаптивная</label></li>
+                        <li class="grids-item"><input type="radio" name="grid-selector" id="fixible" value="fixible"><label for="fixible">фиксированная</label></li>
+                        <li class="grids-item"><input type="radio" name="grid-selector" id="stretch" value="stretch"><label for="stretch">резиновая</label></li>
+                    </ul>
+                </fieldset>
+                <fieldset>
+                    <legend>features</legend>
+                    <ul class="features-list">
+                        <li class="features-item"><input type="checkbox" name="slider" id="slider" value="slider"><label for="slider"></label>слайдер</li>
+                        <li class="features-item"><input type="checkbox" name="advantage-block" id="advantage-block" value="advantage-block"><label for="advantage-block">блок преимуществ</label></li>
+                        <li class="features-item"><input type="checkbox" name="news" id="news" value="news"><label for="news">новости</label></li>
+                        <li class="features-item"><input type="checkbox" name="galery" id="galery" value="galery"><label for="galery">галерея</label></li>
+                        <li class="features-item"><input type="checkbox" name="basket" id="basket" value="basket"><label for="basket">корзина</label></li>
+                    </ul>
+                </fieldset>
+                <button type="submit">Показать</button>
+            </form>
 
-    <main class="content">
-    <h1>Магазин готовых шаблонов</h1>
+        <section class="catalog">
+            <h2 class="visually-hidden">Сортировка и превью сайтов</h2>
+            <div class="catalog-sort">
+                <span>сортировать</span>
+                <ul class="sorted-type">
+                    <li class="sorted-item"><a href="#">По цене</a></li>
+                    <li class="sorted-item"><a href="#">По типу</a></li>
+                    <li class="sorted-item"><a href="#">По названию</a></li>
+                </ul>
+                <ul class="sorted-arrow">
+                    <li class="arrow-item arrow-up"><a href="#">up</a></li>
+                    <li class="arrow-item arrow-down"><a href="#">down</a></li>
+                </ul>
+            </div>
 
-    <section class="filter-block">
-        <h2 class="visually-hidden">Фильтр услуг</h2>
-        <div class="filter">
-            <b>СТОИМОСТЬ</b>
-                <div class="filter-slider" aria-label="диапазон цен">
-                        <input type="range" min="10" max="15000" value="1000" />
-                </div>
-            <table>
-                <tr>ОТ</tr>
-                <tr class="filter-from">0</tr>
-                <tr>ДО</tr>
-                <tr class="filter-to">100</tr>
-            </table>
+            <ul class="template-list">
+                <li class="template-item">
+                    <a class="preview-site" href="#">
+                        <img src="img/sedona.jpg" width="350" height="580" alt="макет сайта sedona"/>
+                        <div class="hiden">
+                            <b>sedona</b>
+                            <p>Информационный сайт<br>для туристов</p>
+                            <a class="button" href="#">9 900 руб.</a>
+                        </div>
+                    </a>
+                </li>
+                <li class="template-item">
+                        <a class="preview-site" href="#">
+                            <img src="img/pink.jpg" width="350" height="580" alt="макет сайта pink app"/>
+                            <div class="hiden">
+                                <b>pink app</b>
+                                Продуктовый лендинг<br>приложения для iOS и Android
+                                <a class="button" href="#">9 900 руб.</a>
+                            </div>
+                        </a>
+                </li>
+                <li class="template-item">
+                        <a class="preview-site" href="#">
+                            <img src="img/barbershop.jpg" width="350" height="580" alt="макет сайта barbershop"/>
+                            <div class="hiden">
+                                <b>barbershop</b>
+                                Сайт салоны красоты.<br>Для мужчин, да.
+                                <a class="button" href="#">9 900 руб.</a>
+                            </div>
+                        </a>
+                </li>
+                <li class="template-item">
+                        <a class="preview-site" href="#">
+                            <img src="img/mishka.jpg" width="350" height="580" alt="макет сайта mishka"/>
+                            <div class="hiden">
+                                <b>mishka</b>
+                                Интернет-магазин<br>вязаных игрушек
+                                <a class="button" href="#">9 900 руб.</a>
+                            </div>
+                        </a>
+                </li>
+                <li class="template-item">
+                        <a class="preview-site" href="#">
+                            <img src="img/a_plus.jpg" width="350" height="580" alt="макет сайта a plus"/>
+                            <div class="hiden">
+                                <b>a plus</b>
+                                Лендинг курсов повышения<br>квалификации
+                                <a class="button" href="#">9 900 руб.</a>
+                            </div>
+                        </a>
+                </li>
+                <li class="template-item">
+                        <a class="preview-site" href="#">
+                            <img src="img/kvast.jpg" width="350" height="580" alt="макет сайта кваст"/>
+                            <div class="hiden">
+                                <b>кваст</b>
+                                Промо-сайт производителя<br>крафтового кваса
+                                <a class="button" href="#">9 900 руб.</a>
+                            </div>
+                        </a>
+                </li>
+                </ul>
+
+                <ul class="breadcrumbs">
+                    <li class="breadcrumbs-item active"><a>1</a></li>
+                    <li class="breadcrumbs-item"><a href="#">2</a></li>
+                    <li class="breadcrumbs-item"><a href="#">3</a></li>
+                    <li class="breadcrumbs-item"><a href="#">следущая</a></li>
+                </ul>
+            </section>
         </div>
-
-        <div class="grid-select">
-            <ul class="grid-select-list">
-                <li class="grid-select-item">
-                    <label>
-                            <input type="radio" name="grid-select-input" id="adaptive">
-                            Адаптивная                        
-                    </label>
-                </li>
-                <li class="grid-select-item">
-                        <label>
-                            <input type="radio" checked name="grid-select-input" id="fixed">
-                            Фиксированная                        
-                        </label>
-                </li>
-                <li class="grid-select-item">
-                        <label>
-                            <input type="radio" name="grid-select-input" id="stretch">
-                            Резиновая                        
-                        </label>
-                </li>
-            </ul>
-        </div>
-
-        <div class="features">
-            <ul class="features-list">
-                <li class="features-item">
-                    <label>
-                            <input type="checkbox" name="slider">
-                            Слайдер                            
-                    </label>
-                </li>
-                <li class="features-item">
-                        <label>
-                            <input type="checkbox" name="dominant-modul">
-                            Блок преимуществ                            
-                        </label>
-                </li>
-                <li class="features-item">
-                        <label>
-                            <input type="checkbox" name="news">
-                            Новости                            
-                        </label>
-                </li>
-                <li class="features-item">
-                        <label>
-                            <input type="checkbox" name="galery">
-                            Галерея                            
-                        </label>
-                </li>
-                <li class="features-item">
-                        <label>
-                            <input type="checkbox" name="basket">
-                            Корзина                            
-                        </label>
-                </li>
-            </ul>
-        </div>
-        <button type="button"><a href="#">Показать</a></button>
-    </section>
-
-    <section class="shop-sorter">       <!--  :)   - sorter how sortIr -->
-        <h2 class="visually-hidden">Сортировка и превью сайтов</h2>
-        <span>Сортировать:</span>
-        <ul class="sorted-shop">
-            <li class="sorter-item">
-                    <a href="#">По цене</a>
-            </li>
-            <li class="sorter-item">
-                    <a href="#">По типу</a>
-            </li>
-            <li class="sorter-item">
-                    <a href="#">По названию</a>
-            </li>
-        </ul>
-
-        <div class="shop-sites">
-            <!-- ТАБЛИЦА С ПРЕВЬЮШКАМИ САЙТОВ -->
-        </div>
-
-        <div class="buttons-next-pages">
-            <ul class="buttons-next-pages-list">
-                <li class="buttons-next-pages-item"><a href="#">1</a></li>
-                <li class="buttons-next-pages-item"><a href="#">2</a></li>
-                <li class="buttons-next-pages-item"><a href="#">3</a></li>
-                <li class="buttons-next-pages-item"><a href="#">Следующая</a></li>
-            </ul>
-        </div>
-    </section>
     </main>
 
-    <footer class="mine-footer">
+
+    <footer class="page-footer">
             <div class="map">
-            <h2 class="visually-hidden">Наш адрес</h2>
-                <div class="contact-info">
+                <img src="img/map.png" width="1200px" height="340px" alt="мы расположены"/>
+                <section class="contact-info">
                     <p class="contact-info-text">
-                        <strong>NЁRDS DESIGN STUDIO</strong><br>
+                        <h3>nerds design studio</h3>
                         <p>
                             191186, Санкт-Петербург,<br>
                             ул. Б. Конюшенная, д. 19/8<br>
-                            <em>тел. +7 (812) 275-75-75</em>
+                            <a href="tel:+78122757575">тел. +7 (812) 275-75-75</a>
                         </p>
                     </p>
     
-                <button type="button">Напишите нам</button>    
-                </div>
+                <a href="form.html" class="button">Напишите нам</a>
+                </section>
             </div>
     
-            <div class="social">
-                <div class="social-buttons">
-                    <ul class="social-buttons-list">
-                        <li><a href="#">в контакте</a></li>
-                        <li><a href="#">facebook</a></li>
-                        <li><a href="#">instagram</a></li>
+            <section class="social">
+                    <h3 class="visually-hidden">социальные сети</h3>
+                    <ul class="social-list">
+                        <li class="social-item"><a href="#">в контакте</a></li>
+                        <li class="social-item"><a href="#">facebook</a></li>
+                        <li class="social-item"><a href="#">instagram</a></li>
                     </ul>
-                </div>
-                <p><strong>Давайте дружить, это выгодно!</strong></p><br>
-                <em>Скидка 10% для друзей из социальных сетей.</em>
-            </div>
+                    <div class="friends">
+                        <p>Давайте дружить, это выгодно!</p>
+                        <p>Скидка 10% для друзей из социальных сетей.</p>
+                    </div>
+            </section>
     </footer>
+
+    <div class="popap">
+            <h2>напишите нам</h2>
+            <button type="button">закрыть</button>
+            <form action="mailForm.php" method="POST" name="userMailForm">
+                <label>
+                        Ваше имя:<br>
+                        <input type="text" required name="userName"/><br>
+                </label>
+                <label>
+                        Ваш e-mail:<br>
+                        <input type="email" required name="userEmail"/><br>
+                </label>
+                <label>
+                        Текст письма:<br>
+                        <textarea name="userText" placeholder="Ваше письмо"></textarea><br>
+                </label>
+                <button type="submit">Отправить</button>
+            </form>
+        </div>
 
 </body>
 </html>
