add pictures at first paje

--- a/catalog.html
+++ b/catalog.html
@@ -17,13 +17,16 @@
                     <ul class="navigation-list">
                         <li><a href="studio.html">студия</a></li>
                         <li><a href="clients.html">клиенты</a></li>
-                        <li><a class="curent">магазин</a></li>
-                        <li><a href="contacts.html">контакты</a></li>
-                        <li><a href="#">корзина</a></li>
-                    </ul>               
+                        <li><a href="shop.html">магазин</a></li>
+                        <li><a href="contacts.html">контакты</a></li>                
+                    </ul>
+                    <ul>
+                        <li>
+                            <a class="basket" href="#">корзина</a>
+                        </li>
+                    </ul>
                 </nav>
-        <h1>Магазин готовых шаблонов</h1>
-        </header>
+            </header>
 
     <main class="page-content">
         <div class="wrapper">
