--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <header class="page-header">
         <nav class="main-navigation">
             <a class="logo">
-                <img src="img/nerds-logo.svg" width="200" height="80" alt="логотип компании">
+                <img src="img/nerds-logo.svg" width="160" height="80" alt="логотип компании">
             </a>
             <ul class="navigation-list">
-                <li class="current"><a href="studio.html">студия</a></li>
+                <li><a href="studio.html">студия</a></li>
                 <li><a href="clients.html">клиенты</a></li>
-                <li><a href="shop.html">магазин</a></li>
+                <li><a href="catalog.html">магазин</a></li>
                 <li><a href="contacts.html">контакты</a></li>
             </ul>
             <ul class="basket">
@@ -89,11 +89,11 @@
             </ul>
         </section>
 
-        <section class="info-block borders">
+        <section class="info-block">
             <h2 class="visually-hidden">Кто мы ?</h2>
 
             <div class="info-block-text">
-                <b>Мы — маленькая, но гордая дизайн-студия из Краснодара.</b>
+                <b>Мы — маленькая, но гордая<br>дизайн-студия из Краснодара.</b>
                 <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
                 <h3>Выполняем заказы на разработку:</h3>
                 <ul class="list-services">
@@ -130,19 +130,18 @@
 
         <section class="partners">
             <h2 class="visually-hidden">Наши партнёры</h2>
-
             <ul class="logo-list">
                 <li class="logo-item">
-                    <a href="#"><img src="img/logo-1.png" width="300" height="180" alt="логотип html academy"></a>
+                    <a href="#"><img src="img/logo-1.png" width="270" height="180" alt="логотип html academy"></a>
                 </li>
                 <li class="logo-item">
-                    <a href="#"><img src="img/logo-2.png" width="300" height="180" alt="логотип barbershop borodinkiy"></a>
+                    <a href="#"><img src="img/logo-2.png" width="270" height="180" alt="логотип barbershop borodinkiy"></a>
                 </li>
                 <li class="logo-item">
-                    <a href="#"><img src="img/logo-3.png" width="300" height="180" alt="логотип pink"></a>
+                    <a href="#"><img src="img/logo-3.png" width="270" height="180" alt="логотип pink"></a>
                 </li>
                 <li class="logo-item">
-                    <a href="#"><img src="img/logo-4.png" width="300" height="180" alt="логотип mishka"></a>
+                    <a href="#"><img src="img/logo-4.png" width="270" height="180" alt="логотип mishka"></a>
                 </li>
             </ul>
         </section>
@@ -150,18 +149,15 @@
 
     <footer class="page-footer">
         <div class="map">
-            <img src="img/map-marker.png" width="200" height="200" alt="указатель">
+            <img src="img/map-marker.png" width="200" height="200" alt="указатель" />
             <img src="img/map.jpg" width="1200" height="640" alt="мы расположены" />
             <section class="contact-info">
-                <p class="contact-info-text">
-                    <h3>nerds design studio</h3>
-                    <p>
-                        191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8<br>
-                        <a class="tel" href="tel:+78122757575">тел. +7 (812) 275-75-75</a>
-                    </p>
+                <h3>nerds design studio</h3>
+                <p>
+                    191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8<br>
+                    <a class="tel" href="tel:+78122757575">тел. +7 (812) 275-75-75</a>
                 </p>
-
-                <a href="form.html" class="button">Напишите нам</a>
+                <a href="form.html" class="button" id="popapVisually">Напишите нам</a>
             </section>
         </div>
 
@@ -179,26 +175,30 @@
         </section>
     </footer>
 
+
+    <div class="overlay"></div>
     <div class="popap">
-        <h2>напишите нам</h2>
-        <button type="button">закрыть</button>
-        <form action="mailForm.php" method="POST" name="userMailForm">
+        <h2>Напишите нам</h2>
+        <button class="button-close-popap" type="button" id="closeModal">
+            <svg width="21" height="21" viewBox="0 0 21 21"><path fill="#a2a2a2" d="M13.328 10.5l7.371-7.371a1.003 1.003 0 0 0 0-1.414L19.285.3a1.003 1.003 0 0 0-1.414 0L10.5 7.672 3.129.301a1.003 1.003 0 0 0-1.414 0L.301 1.715a1.003 1.003 0 0 0 0 1.414L7.672 10.5.301 17.871a1.003 1.003 0 0 0 0 1.414l1.415 1.414a1.003 1.003 0 0 0 1.414 0l7.371-7.371 7.371 7.371a1.003 1.003 0 0 0 1.414 0l1.414-1.414a1.003 1.003 0 0 0 0-1.414L13.328 10.5z"/></svg>
+        </button>
+        <form action="mailForm.php" method="post" name="userMailForm">
+            <div class="name-mail">
+                <label>
+                        Ваше имя:<br>
+                        <input type="text" required name="userName" placeholder="Имя Фамилия"/><br>
+                </label>
+                    <label>
+                        Ваш e-mail:<br>
+                        <input type="email" required name="userEmail" placeholder="email@example.com"/><br>
+                </label>
+            </div>
             <label>
-                    Ваше имя:<br>
-                    <input type="text" required name="userName"/><br>
+                Текст письма:<br>
+                <textarea required name="userText"></textarea><br>
             </label>
-            <label>
-                    Ваш e-mail:<br>
-                    <input type="email" required name="userEmail"/><br>
-            </label>
-            <label>
-                    Текст письма:<br>
-                    <textarea required name="userText">
 
-                    </textarea><br>
-            </label>
-
-            <button class="button" type="submit">Отправить</button>
+            <button class="button" type="submit" id="submitButton">Отправить</button>
         </form>
     </div>
 
