--- a/index.html
+++ b/index.html
@@ -5,19 +5,16 @@
     <meta charset="UTF-8">
     <title>TATU-H</title>
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed:700|Roboto+Mono" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="css/main.css" rel="stylesheet">
-    <script src="js/jquery-3.3.1.min.js"></script>
 </head>
-
 <body class="page">
-
-    <div class="grow-rect"></div>
     <header class="page-header">
+          <div class="container">
         <nav class="main-navigation">
             <a class="logo">
-                <img src="img/nerds-logo.svg" width="160" height="80" alt="логотип компании">
+                <img src="img/nerds-logo.svg" width="160" height="65" alt="логотип компании">
             </a>
             <ul class="navigation-list">
                 <li><a href="studio.html">студия</a></li>
@@ -31,28 +28,29 @@
                 </li>
             </ul>
         </nav>
+        </div>
     </header>
 
     <main class="page-content">
-
         <section class="slider">
+           <div class="container">
             <h2 class="visually-hidden">Слоганы компании</h2>
             <ul class="slider-list">
-                <li class="slider-item slide-1">
+                <li class="slider-item slide-1 active">
                     <div class="slider-item-info">
                         <h2>Долго, дорого, скрупулезно.</h2>
                         <p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения.</p>
                         <a class="button" href="#">узнать больше</a>
                     </div>
                 </li>
-                <li class="slider-item hidden slide-2">
+                <li class="slider-item slide-2">
                     <div class="slider-item-info">
                         <h2>Любим математику как никто другой.</h2>
                         <p>Никакого креатива, только математические формулы<br>для расчета идеальных пропорций.</p>
                         <a class="button" href="#">узнать больше</a>
                     </div>
                 </li>
-                <li class="slider-item hidden slide-3">
+                <li class="slider-item slide-3">
                     <div class="slider-item-info">
                         <h2>Только ночь, только хардкор.</h2>
                         <p>Работать днем, как все? Мы против этого.<br>Ближе к полуночи работа только начинается..</p>
@@ -66,15 +64,16 @@
                 <button type="button" id="slide-2" class="switch-btn">слайд-2</button>
                 <button type="button" id="slide-3" class="switch-btn">слайд-3</button>
             </div>
+            </div>
         </section>
 
-        <section class="advantages">
+        <section class="advantages container">
             <h2 class="visually-hidden">Наши преимущества</h2>
             <ul class="advantages-list">
                 <li class="advantages-item red-rect">
                     <b>веб сайты</b>
                     <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-                    <a class="button red" href="#">заказать</a>
+                    <a class="button" href="#">заказать</a>
                 </li>
                 <li class="advantages-item green-rect">
                     <b>приложения</b>
@@ -89,7 +88,7 @@
             </ul>
         </section>
 
-        <section class="info-block">
+        <section class="info-block container">
             <h2 class="visually-hidden">Кто мы ?</h2>
 
             <div class="info-block-text">
@@ -128,7 +127,7 @@
             </div>
         </section>
 
-        <section class="partners">
+        <section class="partners container">
             <h2 class="visually-hidden">Наши партнёры</h2>
             <ul class="logo-list">
                 <li class="logo-item">
@@ -149,8 +148,7 @@
 
     <footer class="page-footer">
         <div class="map">
-            <img src="img/map-marker.png" width="200" height="200" alt="указатель" />
-            <img src="img/map.jpg" width="1200" height="640" alt="мы расположены" />
+            <img src="img/map1.jpg" width="1440" height="415" alt="мы расположены" />
             <section class="contact-info">
                 <h3>nerds design studio</h3>
                 <p>
@@ -161,12 +159,24 @@
             </section>
         </div>
 
-        <section class="social">
+        <section class="social container">
             <h3 class="visually-hidden">социальные сети</h3>
             <ul class="social-list">
-                <li class="social-item"><a href="#">в контакте</a></li>
-                <li class="social-item"><a href="#">facebook</a></li>
-                <li class="social-item"><a href="#">instagram</a></li>
+                <li class="social-item">
+                    <a href="#">
+                        <span class="visually-hidden">в контакте</span>
+                        <svg width="26" height="15" viewBox="0 0 26 15"><path fill="#fff" d="M16.138 11.51c.956-.309 2.18 2.04 3.483 2.939.978.681 1.727.534 1.727.534l3.473-.05s1.815-.112.957-1.554c-.071-.12-.503-1.069-2.585-3.022-2.177-2.043-1.882-1.712.739-5.244 1.597-2.153 2.236-3.468 2.036-4.028-.192-.539-1.365-.399-1.365-.399L20.69.713c-.381.001-.704.119-.851.515-.003.004-.621 1.666-1.445 3.079-1.741 2.989-2.436 3.148-2.724 2.961-.661-.433-.494-1.737-.494-2.664 0-2.897.432-4.105-.846-4.417-.427-.104-.739-.172-1.828-.182-1.392-.021-2.574 0-3.244.329-.445.223-.786.712-.579.74.26.035.843.16 1.155.586.401.552.389 1.789.389 1.789s.229 3.411-.54 3.834c-.528.29-1.25-.302-2.803-3.016-.793-1.388-1.392-2.922-1.392-2.922s-.116-.285-.326-.441c-.25-.185-.6-.244-.6-.244L.848.684S.29.7.085.946c-.182.218-.015.668-.015.668s2.909 6.881 6.203 10.347c3.02 3.182 6.452 2.971 6.452 2.971h1.555s.469-.054.709-.312c.224-.24.214-.691.214-.691s-.031-2.109.935-2.419z"/></svg>
+                    </a></li>
+                <li class="social-item">
+                    <a href="#">
+                        <span class="visually-hidden">facebook</span>
+                        <svg width="12" height="22" viewBox="0 0 12 22"><path fill="#fff" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z"/></svg>
+                    </a></li>
+                <li class="social-item">
+                    <a href="#">
+                        <span class="visually-hidden">instagram</span>
+                        <svg width="21" height="21" viewBox="0 0 21 21"><path fill="#fff" d="M18 0H3C1.35 0 0 1.35 0 3v15c0 1.65 1.35 3 3 3h15c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zm-7.5 7c1.93 0 3.5 1.57 3.5 3.5S12.43 14 10.5 14 7 12.43 7 10.5 8.57 7 10.5 7zM18 18H3V9h1.181A6.504 6.504 0 0 0 4 10.5a6.5 6.5 0 1 0 13 0 6.45 6.45 0 0 0-.181-1.5H18v9zm0-11h-4V3h4v4z"/></svg>
+                    </a></li>
             </ul>
             <div class="friends">
                 <p>Давайте дружить, это выгодно!</p>
@@ -175,8 +185,7 @@
         </section>
     </footer>
 
-
-    <div class="overlay"></div>
+   <div class="overlay"></div>
     <div class="popap">
         <h2>Напишите нам</h2>
         <button class="button-close-popap" type="button" id="closeModal">
@@ -185,23 +194,24 @@
         <form action="mailForm.php" method="post" name="userMailForm">
             <div class="name-mail">
                 <label>
-                        Ваше имя:<br>
+                        <span>Ваше имя:<br></span>
                         <input type="text" required name="userName" placeholder="Имя Фамилия"/><br>
                 </label>
                     <label>
-                        Ваш e-mail:<br>
+                        <span>Ваш e-mail:<br></span>
                         <input type="email" required name="userEmail" placeholder="email@example.com"/><br>
                 </label>
             </div>
             <label>
-                Текст письма:<br>
+                <span>Текст письма:<br></span>
                 <textarea required name="userText"></textarea><br>
             </label>
 
             <button class="button" type="submit" id="submitButton">Отправить</button>
         </form>
     </div>
-
+    
+    <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/nerds_js.js"></script>
 
 </body>
