--- a/catalog.html
+++ b/catalog.html
@@ -39,11 +39,9 @@
             <h1 class="container">Магазин готовых шаблонов</h1>
         </div>
            <div class="wraper container">
-            <form class="user-select" action="formFilter.php" method="POST" name="form-filter">
+            <form class="user-select" action="https://echo.htmlacademy.ru" method="POST" name="form-filter">
                 <fieldset>
-                    <legend class="visually-hidden">cost</legend>
-                    <div class="cost">
-                        <span>стоимость</span>
+                    <legend>стоимость</legend>
                         <div class="toggle-modul">
                             <div class="grad-line">
                                 <div class="bar-line"></div>
@@ -55,11 +53,9 @@
                             <label class="min-price">от <input name="min-price" type="text" value="0"></label>
                             <label class="max-price">до <input name="max-price" type="text" value="15000"></label>
                         </div>
-                    </div>
                 </fieldset>
                 <fieldset>
-                    <legend class="visually-hidden">grids</legend>
-                    <span>сетка</span>
+                    <legend>сетка</legend>
                     <ul class="grids-list">
                         <li class="grids-item"><input class="visually-hidden" type="radio" name="grid-selector" id="adaptive" value="adaptive"><label for="adaptive">Адаптивная</label></li>
                         <li class="grids-item"><input class="visually-hidden" type="radio" name="grid-selector" checked id="fixible" value="fixible"><label for="fixible">Фиксированная</label></li>
@@ -67,8 +63,7 @@
                     </ul>
                 </fieldset>
                 <fieldset>
-                    <legend class="visually-hidden">features</legend>
-                    <span>особенности</span>
+                    <legend>особенности</legend>
                     <ul class="features-list">
                         <li class="features-item"><input class="visually-hidden" type="checkbox" name="slider" id="slider" value="slider"><label for="slider">Слайдер</label></li>
                         <li class="features-item"><input class="visually-hidden" type="checkbox" checked name="advantage-block" id="advantage-block" value="advantage-block"><label for="advantage-block">Блок преимуществ</label></li>
@@ -202,7 +197,7 @@
         <button class="button-close-popap" type="button" id="closeModal">
             <svg width="21" height="21" viewBox="0 0 21 21"><path fill="#a2a2a2" d="M13.328 10.5l7.371-7.371a1.003 1.003 0 0 0 0-1.414L19.285.3a1.003 1.003 0 0 0-1.414 0L10.5 7.672 3.129.301a1.003 1.003 0 0 0-1.414 0L.301 1.715a1.003 1.003 0 0 0 0 1.414L7.672 10.5.301 17.871a1.003 1.003 0 0 0 0 1.414l1.415 1.414a1.003 1.003 0 0 0 1.414 0l7.371-7.371 7.371 7.371a1.003 1.003 0 0 0 1.414 0l1.414-1.414a1.003 1.003 0 0 0 0-1.414L13.328 10.5z"/></svg>
         </button>
-        <form action="mailForm.php" method="post" name="userMailForm">
+        <form action="https://echo.htmlacademy.ru" method="post" name="userMailForm">
             <div class="name-mail">
                 <label>
                         <span>Ваше имя:<br></span>
