--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="page-header">
           <div class="container">
         <nav class="main-navigation">
-            <a class="logo">
+            <a class="logo disabled">
                 <img src="img/nerds-logo.svg" width="160" height="65" alt="логотип компании">
             </a>
             <ul class="navigation-list">
@@ -191,7 +191,7 @@
         <button class="button-close-popap" type="button" id="closeModal">
             <svg width="21" height="21" viewBox="0 0 21 21"><path fill="#a2a2a2" d="M13.328 10.5l7.371-7.371a1.003 1.003 0 0 0 0-1.414L19.285.3a1.003 1.003 0 0 0-1.414 0L10.5 7.672 3.129.301a1.003 1.003 0 0 0-1.414 0L.301 1.715a1.003 1.003 0 0 0 0 1.414L7.672 10.5.301 17.871a1.003 1.003 0 0 0 0 1.414l1.415 1.414a1.003 1.003 0 0 0 1.414 0l7.371-7.371 7.371 7.371a1.003 1.003 0 0 0 1.414 0l1.414-1.414a1.003 1.003 0 0 0 0-1.414L13.328 10.5z"/></svg>
         </button>
-        <form action="mailForm.php" method="post" name="userMailForm">
+        <form action="https://echo.htmlacademy.ru" method="post" name="userMailForm">
             <div class="name-mail">
                 <label>
                         <span>Ваше имя:<br></span>
