add map location

--- a/catalog.html
+++ b/catalog.html
@@ -154,7 +154,8 @@
 
     <footer class="page-footer">
         <div class="map">
-            <img src="img/map1.jpg" width="1440" height="415" alt="мы расположены" />
+<!--            <img src="img/map1.jpg" width="1440" height="415" alt="мы расположены" />-->
+            <div class="interactive-map" id="map"></div>
             <section class="contact-info">
                 <h3>nerds design studio</h3>
                 <p>
@@ -218,6 +219,7 @@
     </div>
     
     <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
     <script src="js/nerds_js.js"></script>
 
 </body>
